k8s/istio/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: service-gateway
  namespace: service
spec:
  selector:
    # app: istio-ingressgateway
    istio: ingressgateway
  servers:
    - hosts:
        - "*"

      port:
        number: 80
        name: http
        protocol: HTTP
      # tls:
      #   httpsRedirect: true

    # - hosts:
    #     - "*"

    #   port:
    #     number: 443
    #     name: https
    #     protocol: HTTPS

    #   tls:
    #     mode: SIMPLE
    #     credentialName: ingress-tls-cert
